Add unit tests for game logic and scoring in Kniffel
- Implement tests for Dice class functionality including initial roll, value creation, and rolling behavior.
- Add tests for ComputerPlayer class to validate AI decision-making and category selection.
- Create tests for Game class to ensure proper game initialization, turn management, and winner determination.
- Develop tests for Player class to verify score management and category usage.
- Introduce tests for KniffelScorer class to validate score calculations for various categories.